--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Dying slowly</title>
+        <title>Pointless</title>
     </head>
-    <body>
-        
+    <body style ="background-color:rgb(131, 91, 103)">
+        <h1 style = font-family:fantasy>Make me cry</h1>
+        <img src="AFhouse.png">
+        <p style ="color:rgb(202, 91, 0) "><del>yup. that'll do it</del><ins>Cannot show weakness</ins></p>
     </body>
+    <form action="/action_page.php" method="get">
+        <input type="radio" id="html" name="fav_language" value="HTML">
+        <label for="html">HTML</label><br>
+        <input type="radio" id="css" name="fav_language" value="CSS">
+        <label for="css">CSS</label><br>
+        <input type="submit" value="Submit">
+    </form>
 </html>
