--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <p style ="color:rgb(202, 91, 0) "><del>yup. that'll do it</del><ins>Cannot show weakness</ins></p>
     </body>
     <form action="/action_page.php" method="get">
-        <input type="radio" id="html" name="fav_language" value="HTML">
-        <label for="html">HTML</label><br>
-        <input type="radio" id="css" name="fav_language" value="CSS">
-        <label for="css">CSS</label><br>
+        <input type="radio" id="html" name="fav_band" value="CarSeat">
+        <label for="html">Car seat headrest</label><br>
+        <input type="radio" id="css" name="fav_band" value="MomJeans">
+        <label for="css">mom jeans</label><br>
         <input type="submit" value="Submit">
     </form>
 </html>
